Added Card, Fetched and Arranged Popular movies

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_API_KEY = &api_key=7ef17b831aaf0d8841d9f3c89de7028b
 REACT_APP_URL = https://api.themoviedb.org/3
+REACT_APP_IMAGE_URL = https://image.tmdb.org/t/p/w500
