Migrated state management to Redux toolkit

--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 REACT_APP_API_KEY = api_key=7ef17b831aaf0d8841d9f3c89de7028b
-REACT_APP_URL = https://api.themoviedb.org/3
+REACT_APP_URL = https://api.themoviedb.org/3/
 REACT_APP_IMAGE_URL = https://image.tmdb.org/t/p/w500
 
 ENDPOINTS
 REACT_APP_DISCOVER_ENDPOINT = /discover/movie?sort_by=popularity.desc&
-REACT_APP_MOVIE_ENDPOINT = /search/movie?
+REACT_APP_GET_LATEST_MOVIES = /movie/latest?
+REACT_APP_MOVIE_ENDPOINT = search/movie?
