Enabled the search function & Major css changes

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ ENDPOINTS
 REACT_APP_DISCOVER_ENDPOINT = /discover/movie?sort_by=popularity.desc&
 REACT_APP_GET_LATEST_MOVIES = /movie/latest?
 REACT_APP_MOVIE_ENDPOINT = search/movie?
+REACT_APP_GENRE_MOVIE = genre/movie/list?
