--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ REACT_APP_DISCOVER_ENDPOINT = /discover/movie?sort_by=popularity.desc&
 REACT_APP_GET_LATEST_MOVIES = /movie/latest?
 REACT_APP_MOVIE_ENDPOINT = search/movie?
 REACT_APP_GENRE_MOVIE = genre/movie/list?
+REACT_APP_MOVIE_FRAME = https://www.2embed.ru/embed/tmdb/movie?id=
