Changes to moviedb api

--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ REACT_APP_DISCOVER_ENDPOINT = /discover/movie?sort_by=popularity.desc&
 REACT_APP_GET_LATEST_MOVIES = /movie/latest?
 REACT_APP_MOVIE_ENDPOINT = search/movie?
 REACT_APP_GENRE_MOVIE = genre/movie/list?
-REACT_APP_FRAME = https://www.2embed.ru/embed/tmdb/
+REACT_APP_FRAME = https://www.2embed.org/embed/
